@@ -1,3 +1,2 @@
 docdir = $(datadir)/doc/@PACKAGE@
-doc_DATA = xpak.txt xpak.html
-EXTRA_DIST = xpak.txt xpak.html xpak.5.txt
+EXTRA_DIST = xpak.5.txt
